[MRG][FIX] Add margin between forum comments also in default view. Limit card.postbody no background and no borders to blogs - forum posts and threads are more readable with the backgrounds and borders. [from revision 70726]

--- a/themes/base_files/css/tiki_base.css
+++ b/themes/base_files/css/tiki_base.css
@@ -1810,7 +1810,7 @@ td.url {
   margin-right: 0;
   margin-left: 1rem; }
 
-.card.postbody, .card.postbody .card-header, .card.postbody .card-footer {
+.tiki_blogs .card.postbody, .tiki_blogs .card.postbody .card-header, .tiki_blogs .card.postbody .card-footer {
   background-color: transparent;
   border: none; }
 
